# DjangoHW

./: .gitignore  README.md  data.json  db.sqlite3  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py  0003_alter_blogpost_options.py  0004_alter_blogpost_content_alter_blogpost_created_date_and_more.py
blog/templates/blog/: create_form.html  edit_form.html  post_detail.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_product_created_at.py  0002_product_creator.py  0003_remove_product_created_at.py  0004_version.py
catalog/templates/catalog/: base.html  card_list.html  category_list.html  contacts.html  dought_card.html  home.html  item.html  item_detail.html  product_form.html
catalog/templatetags/: custom_filters.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_token.py
users/templates/registration/: login.html
users/templates/users/: base.html  customuser_form.html  profile_detail.html
